--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,9 +3,14 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "type": "go",
-    "request": "launch",
-    "mode": "auto",
-    "program": "${workspaceFolder}/cmd/server/main.go",
-    "cwd": "${workspaceFolder}"
+    "configurations": [
+        {
+            "name": "Launch Package",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/main.go",
+            "cwd": "${workspaceFolder}"
+        }
+    ]
 }
